LENGUAJE/BLINKER6/C/BLINKER.H

unsigned      __far BLICUROVL(void);
unsigned      __far BLICURSIZ(void);
unsigned      __far BLIDBGHAN(unsigned);
unsigned      __far BLIDEMCAL(unsigned);
unsigned      __far BLIDEMMIN(unsigned);
void          __far BLIDISTRC(unsigned);
unsigned      __far BLIERRNUM(void);
unsigned long __far BLIOVLOPS(void);
void          __far BLIOVLRES(void);
unsigned long __far BLIOVLSIZ(void);
void          __far BLIOVLSUS(unsigned);
unsigned      __far BLITOTACT(void);
unsigned      __far BLITOTLOD(void);
unsigned      __far BLITOTSIZ(void);
unsigned      __far BLIVERNUM(void);
unsigned      __far SWPADDENV(unsigned);
unsigned      __far SWPCURDIR(unsigned);
unsigned      __far SWPDISMSG(unsigned);
unsigned      __far SWPEMS320(unsigned);
unsigned      __far SWPERRLEV(void);
unsigned      __far SWPERRMAJ(void);
unsigned      __far SWPERRMIN(void);
unsigned      __far SWPFREEMS(unsigned);
unsigned      __far SWPFREXMS(unsigned);
unsigned      __far SWPGETKEY(unsigned);
unsigned      __far SWPKEYCLR(unsigned);
unsigned      __far SWPNOBOOT(unsigned);
unsigned      __far SWPUSEEMS(unsigned);
unsigned      __far SWPUSEUMB(unsigned);
unsigned      __far SWPUSEXMS(unsigned);
unsigned      __far SWPVIDMDE(unsigned);
/* SWPMAJERR codes */

#define SWPNONERR 0              /* No error */
#define SWPDSKFUL 1              /* Disk full */
#define SWPDSKOPE 2              /* Disk file open error */
#define SWPDSKERR 3              /* Disk i/o error */
#define SWPDIRERR 4              /* Change directory error */
#define SWPCREERR 5              /* Temp file create error */
#define SWPDRVERR 6              /* Change drive error */
#define SWPEMSERR 7              /* EMS error */
#define SWPXMSERR 8              /* XMS error */
#define SWPCMDERR 9              /* SHELL error */
#define SWPHANERR 10             /* Handle table too large to save */
#define SWPMEMERR 11             /* Top of memory decreased error */
#define SWPMCBERR 12             /* MCB chain corrupt */
#define SWPMCBCNT 13             /* Too many MCBs (128 max) */
#define SWPBLKERR 14             /* DOS memory function call error */
#define SWPMEMRES 15             /* Error reallocating program segment */
#define SWPCSPERR 16             /* COMSPEC variable not found */
#define SWPINTERR 254            /* Internal error */
/* Non fatal SWPERRMIN() codes when SWPERRMAJ() = 0 */

#define SWPKILTSR 1              /* TSR was removed */
#define SWPMEMINC 2              /* Top of DOS memory increased */