LENGUAJE/BLINKER6/BAS/BLINKER.BI

'*******************************************************
'
' BLINKER.BI    94.07.21
'
' Blinker 3.x function header for BASIC
'
' Copyright (C) ASM inc, 1992 - 1994
'
'*******************************************************

DECLARE FUNCTION BLICUROVL%    CDECL ALIAS "_BLICUROVL"
DECLARE FUNCTION BLICURSIZ%    CDECL ALIAS "_BLICURSIZ"
DECLARE FUNCTION BLIDBGHAN%    CDECL ALIAS "_BLIDBGHAN" (BYVAL handle AS INTEGER)
DECLARE FUNCTION BLIDEMCAL%    CDECL ALIAS "_BLIDEMCAL" (BYVAL DemoLimit AS INTEGER)
DECLARE FUNCTION BLIDEMDTEBAS$ CDECL ALIAS "_BLIDEMDTEBAS"
DECLARE FUNCTION BLIDEMMIN%    CDECL ALIAS "_BLIDEMMIN" (BYVAL DemoLimit AS INTEGER)
DECLARE SUB      BLIDISTRC     CDECL ALIAS "_BLIDISTRC" (BYVAL handle AS INTEGER)
DECLARE FUNCTION BLIERRNUM%    CDECL ALIAS "_BLIERRNUM"
DECLARE FUNCTION BLIERRPRMBAS$ CDECL ALIAS "_BLIERRPRMBAS"
DECLARE FUNCTION BLIOVLOPS%    CDECL ALIAS "_BLIOVLOPS"
DECLARE SUB      BLIOVLRES     CDECL ALIAS "_BLIOVLRES"
DECLARE FUNCTION BLIOVLSIZ%    CDECL ALIAS "_BLIOVLSIZ"
DECLARE SUB      BLIOVLSUS     CDECL ALIAS "_BLIOVLSUS" (BYVAL Level AS INTEGER)
DECLARE FUNCTION BLISERNUMBAS$ CDECL ALIAS "_BLISERNUMBAS"
DECLARE FUNCTION BLITOTACT%    CDECL ALIAS "_BLITOTACT"
DECLARE FUNCTION BLITOTLOD%    CDECL ALIAS "_BLITOTLOD"
DECLARE FUNCTION BLITOTSIZ%    CDECL ALIAS "_BLITOTSIZ"
DECLARE FUNCTION BLIVERNUM%    CDECL ALIAS "_BLIVERNUM"

DECLARE FUNCTION SWPADDENV%    CDECL ALIAS "_SWPADDENV" (BYVAL ExtraBytes AS INTEGER)
DECLARE FUNCTION SWPADDSTRBAS% CDECL ALIAS "_SWPADDSTRBAS" (ProgId AS STRING, RetString AS STRING)
DECLARE FUNCTION SWPCURDIR%    CDECL ALIAS "_SWPCURDIR" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPDISMSG%    CDECL ALIAS "_SWPDISMSG" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPEMS320%    CDECL ALIAS "_SWPEMS320" (BYVAL MemKB AS INTEGER)
DECLARE FUNCTION SWPERRLEV%    CDECL ALIAS "_SWPERRLEV"
DECLARE FUNCTION SWPERRMAJ%    CDECL ALIAS "_SWPERRMAJ"
DECLARE FUNCTION SWPERRMIN%    CDECL ALIAS "_SWPERRMIN"
DECLARE FUNCTION SWPFREEMS%    CDECL ALIAS "_SWPFREEMS" (BYVAL MemKB AS INTEGER)
DECLARE FUNCTION SWPFREXMS%    CDECL ALIAS "_SWPFREXMS" (BYVAL MemKB AS INTEGER)
DECLARE FUNCTION SWPGETKEY%    CDECL ALIAS "_SWPGETKEY" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPGETPIDBAS% CDECL ALIAS "_SWPGETPIDBAS" (ProgId AS STRING)
DECLARE FUNCTION SWPGETSTRBAS$ CDECL ALIAS "_SWPGETSTRBAS"
DECLARE FUNCTION SWPKEYBRDBAS% CDECL ALIAS "_SWPKEYBRDBAS" (KeyString AS STRING)
DECLARE FUNCTION SWPKEYCLR%    CDECL ALIAS "_SWPKEYCLR" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPNOBOOT%    CDECL ALIAS "_SWPNOBOOT" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPRUNCMDBAS% CDECL ALIAS "_SWPRUNCMDBAS" (Program AS STRING, BYVAL FreeMem AS INTEGER, RunPath AS STRING, TmpPath AS STRING)
DECLARE FUNCTION SWPSETENVBAS% CDECL ALIAS "_SWPSETENVBAS" (Environment AS STRING)
DECLARE FUNCTION SWPSETPIDBAS% CDECL ALIAS "_SWPSETPIDBAS" (ProgId AS STRING)
DECLARE FUNCTION SWPSETSTRBAS% CDECL ALIAS "_SWPSETSTRBAS" (ProgId AS STRING, RetString AS STRING)
DECLARE FUNCTION SWPUSEEMS%    CDECL ALIAS "_SWPUSEEMS" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPUSEUMB%    CDECL ALIAS "_SWPUSEUMB" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPUSEXMS%    CDECL ALIAS "_SWPUSEXMS" (BYVAL Flag AS INTEGER)
DECLARE FUNCTION SWPVIDMDE%    CDECL ALIAS "_SWPVIDMDE" (BYVAL Flag AS INTEGER)

CONST SWPNONERR=0    ' No error
CONST SWPDSKFUL=1    ' Disk full
CONST SWPDSKOPE=2    ' Disk file open error
CONST SWPDSKERR=3    ' Disk i/o error
CONST SWPDIRERR=4    ' Change directory error
CONST SWPCREERR=5    ' Temp file create error
CONST SWPDRVERR=6    ' Change drive error
CONST SWPEMSERR=7    ' EMS error
CONST SWPXMSERR=8    ' XMS error
CONST SWPCMDERR=9    ' SHELL error
CONST SWPHANERR=10   ' Handle table too big to save
CONST SWPMEMERR=11   ' Top of memory decreased error
CONST SWPMCBERR=12   ' MCB chain corrupt
CONST SWPMCBCNT=13   ' Too many MCBs
CONST SWPBLKERR=14   ' DOS memory function call error
CONST SWPMEMRES=15   ' Error reallocating segment
CONST SWPCSPERR=16   ' No COMSPEC setting found
CONST SWPINTERR=254  ' Internal error

' Non fatal minor error codes when major error code is zero

CONST SWPKILTSR = 1  ' TSR was removed
CONST SWPMEMINC = 2  ' Top of memory increased
